# hello_openmp

./: CMakeLists.txt  README.md  hello-openmp.f90
.github/workflows/: CI.yml
